in profile test

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Hello, I'm Josh 😎</h1>
         <img src="./images/Picture1.png">
         <p>
-          "I love Github, and motorbikes 🏍️. I launched Le Wagon to teach code to entrepreneurs
+          "I love Github. I launched Le Wagon to teach code to entrepreneurs
           and
           creative people around the world 🌍."
         </p>
